mailforwarder/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mailforwarder
  name: forwarder
  labels:
    app: forwarder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forwarder
  template:
    metadata:
      labels:
        app: forwarder
    spec:
      containers:
      - name: forwarder
        image: zixia/simple-mail-forwarder
        ports:
        - containerPort: 25
        volumeMounts:
         - name: certs-forwarder
           mountPath: "/etc/postfix/cert/"
           readOnly: true
         - name: conf-forwarder
           mountPath: "/var/db/dkim/88288338.xyz/"
           readOnly: true
      volumes:
      - name: certs-forwarder
        secret:
          secretName: forwarder
          items:
          - key: tls.crt
            path: smtp.ec.cert
          - key: tls.key
            path: smtp.ec.key
          - key: tls.crt
            path: smtp.cert
          - key: tls.key
            path: smtp.key
      - name: conf-forwarder
        configMap:
          name: forwarder
          items:
          - key: dkim.key
            path: default.txt
