mailforwarder/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mailforwarder
  labels:
    app: forwarder
  name: forwarder
spec:
  type: NodePort
  ports:
  - name: smtp
    nodePort: 30025
    port: 25
    protocol: TCP
    targetPort: 25
  selector:
    app: forwarder
