mailforwarder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: mailforwarder
  name: forwarder
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
  - secretName: forwarder
    hosts:
    - mail.88288338.xyz
  rules:
  - host: mail.88288338.xyz
